examples/java/failing/annotations/Left.java
class MyClass {
        @Override
        public void doSomething();
}
